// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker - Demo Custom type and option textual values 1`] = `
<div class="md-date-picker custom">
  <div class="md-picker">
    <div class="md-picker-column" style="height: 245px;">
      <div class="md-picker-column-container">
        <div class="md-picker-column-masker top" style="height: 100px;"></div>
        <div class="md-picker-column-masker bottom" style="height: 100px;"></div>
        <div class="md-picker-column-list">
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px; margin-top: -100px;">
              <li class="column-item" style="height: 45px; line-height: 45px;">2009年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2010年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2011年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2012年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2013年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2014年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2015年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2016年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2017年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2018年</li>
              <li class="column-item active" style="height: 45px; line-height: 45px;">2019年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2020年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2021年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2022年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2023年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2024年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2025年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2026年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2027年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2028年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2029年</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px; margin-top: -100px;">
              <li class="column-item" style="height: 45px; line-height: 45px;">1月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">5月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9月</li>
              <li class="column-item active" style="height: 45px; line-height: 45px;">10月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12月</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">*1日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*2日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*3日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*4日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*5日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*6日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*7日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*8日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*9日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*10日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*11日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*12日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*13日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*14日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*15日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*16日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*17日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*18日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*19日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*20日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*21日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*22日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*23日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*24日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*25日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*26日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*27日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*28日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*29日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*30日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">*31日</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">0时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">1时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">5时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">10时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">13时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">14时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">15时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">16时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">17时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">18时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">19时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">20时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">21时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">22时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">23时</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">0分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">1分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">5分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">10分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">13分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">14分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">15分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">16分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">17分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">18分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">19分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">20分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">21分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">22分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">23分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">24分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">25分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">26分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">27分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">28分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">29分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">30分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">31分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">32分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">33分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">34分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">35分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">36分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">37分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">38分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">39分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">40分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">41分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">42分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">43分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">44分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">45分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">46分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">47分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">48分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">49分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">50分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">51分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">52分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">53分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">54分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">55分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">56分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">57分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">58分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">59分</li>
            </ul>
          </div>
        </div>
        <div class="md-picker-column-hooks">
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker - Demo Date & Time selection 1`] = `
<div class="md-date-picker datetime">
  <div class="md-picker">
    <div class="md-picker-column" style="height: 245px;">
      <div class="md-picker-column-container">
        <div class="md-picker-column-masker top" style="height: 100px;"></div>
        <div class="md-picker-column-masker bottom" style="height: 100px;"></div>
        <div class="md-picker-column-list">
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">2018年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2019年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2020年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2021年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2022年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2023年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2024年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2025年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2026年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2027年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2028年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2029年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2030年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2031年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2032年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2033年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2034年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2035年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2036年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2037年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2038年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2039年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2040年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2041年</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">10月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12月</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">10日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">13日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">14日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">15日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">16日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">17日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">18日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">19日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">20日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">21日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">22日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">23日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">24日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">25日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">26日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">27日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">28日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">29日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">30日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">31日</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">0时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">1时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">5时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">10时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">13时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">14时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">15时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">16时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">17时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">18时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">19时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">20时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">21时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">22时</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">23时</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">0分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">1分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">5分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">10分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">13分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">14分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">15分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">16分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">17分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">18分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">19分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">20分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">21分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">22分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">23分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">24分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">25分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">26分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">27分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">28分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">29分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">30分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">31分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">32分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">33分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">34分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">35分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">36分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">37分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">38分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">39分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">40分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">41分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">42分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">43分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">44分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">45分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">46分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">47分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">48分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">49分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">50分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">51分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">52分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">53分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">54分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">55分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">56分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">57分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">58分</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">59分</li>
            </ul>
          </div>
        </div>
        <div class="md-picker-column-hooks">
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker - Demo Date selection 1`] = `
<div class="md-date-picker date">
  <div class="md-picker">
    <div class="md-picker-column" style="height: 245px;">
      <div class="md-picker-column-container">
        <div class="md-picker-column-masker top" style="height: 100px;"></div>
        <div class="md-picker-column-masker bottom" style="height: 100px;"></div>
        <div class="md-picker-column-list">
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px; margin-top: -100px;">
              <li class="column-item" style="height: 45px; line-height: 45px;">2013年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2014年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2015年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2016年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2017年</li>
              <li class="column-item active" style="height: 45px; line-height: 45px;">2018年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2019年</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2020年</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px; margin-top: -45px;">
              <li class="column-item" style="height: 45px; line-height: 45px;">1月</li>
              <li class="column-item active" style="height: 45px; line-height: 45px;">2月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">5月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">10月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11月</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12月</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px; margin-top: -100px;">
              <li class="column-item" style="height: 45px; line-height: 45px;">1日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4日</li>
              <li class="column-item active" style="height: 45px; line-height: 45px;">5日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">10日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">13日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">14日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">15日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">16日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">17日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">18日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">19日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">20日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">21日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">22日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">23日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">24日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">25日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">26日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">27日</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">28日</li>
            </ul>
          </div>
        </div>
        <div class="md-picker-column-hooks">
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker - Demo Time selection 1`] = `
<div class="md-date-picker time">
  <div class="md-picker">
    <div class="md-picker-column" style="height: 245px;">
      <div class="md-picker-column-container">
        <div class="md-picker-column-masker top" style="height: 100px;"></div>
        <div class="md-picker-column-masker bottom" style="height: 100px;"></div>
        <div class="md-picker-column-list">
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">0'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">1'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">5'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">10'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">13'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">14'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">15'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">16'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">17'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">18'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">19'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">20'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">21'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">22'</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">23'</li>
            </ul>
          </div>
          <div class="md-picker-column-item">
            <ul class="column-list" style="padding-top: 100px;">
              <li class="column-item active" style="height: 45px; line-height: 45px;">0''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">1''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">2''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">3''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">4''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">5''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">6''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">7''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">8''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">9''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">10''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">11''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">12''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">13''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">14''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">15''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">16''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">17''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">18''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">19''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">20''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">21''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">22''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">23''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">24''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">25''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">26''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">27''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">28''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">29''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">30''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">31''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">32''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">33''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">34''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">35''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">36''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">37''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">38''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">39''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">40''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">41''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">42''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">43''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">44''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">45''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">46''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">47''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">48''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">49''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">50''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">51''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">52''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">53''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">54''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">55''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">56''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">57''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">58''</li>
              <li class="column-item" style="height: 45px; line-height: 45px;">59''</li>
            </ul>
          </div>
        </div>
        <div class="md-picker-column-hooks">
          <div class="md-picker-column-hook"></div>
          <div class="md-picker-column-hook"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
